# cx-core

./: .gitignore  AGENTS.md  AGENT_SWARM_REPORT.md  ARCHITECTURE_ASSESSMENT.md  BRANDING.md  BSL_LICENSE.md  CHANGELOG.md  CLAUDE.md  COMMIT_MSG.txt  COMPONENTS.md  CONFIGURATION.md  CONTRIBUTING-NEW.md  CONTRIBUTING.md  Cargo.toml  Contributing.md  HANDOFF_TO_DEVS.md  ISSUE_TRIAGE.md  LICENSE  MANIFEST.in  MULTIPROCESS_RACE_FIX.md  Makefile  NEXT_STEPS.md  PROGRESS_REPORT.md  README-NEW.md  README.md  README_ACCELERATOR_LIMITS.md  ROADMAP.md  SECURITY.md  TESTING.md  TEST_SUMMARY.md  WARNINGS_TRACKER.md  anshgrover23-contributor-report.md  contribution.md  cx-linux-activity-report.md  demo.cast  fix_cli.py  fix_indents.py  get-deps  install.sh  kv_cache_manager.py  (+21 more)
.claude/: CLAUDE.md
.github/: CLA_BADGE.md  FUNDING.yml  cla-signers.json  copilot-instructions.md  dependabot.yml
Genesis_Artifacts/: hybrid_gpu_manager.py  patch.py
LLM/: interpreter.py  requirements.txt
assets/: cortex-terminal.desktop  cx-terminal.appdata.xml  cx-terminal.desktop
benchmarks/: benchmark_cache_ops.py  benchmark_streaming.py
ci/: appimage.sh  deploy.sh
cortex/: README.md  SUMMARY.md  __init__.py  _post_install.py  api_key_detector.py  approval.py  approval_policy.py  ask.py  autonomous_patcher.py  batch_installer.py  benchmark.py  branding.py  cli.py  config_manager.py  confirm.py  conflict_predictor.py  context_memory.py  coordinator.py  daemon_client.py  daemon_commands.py  dashboard.py  demo.py  dependency_resolver.new.py  dependency_resolver.py  do_runner.py  docs_generator.py  doctor.py  env_loader.py  env_manager.py  error_parser.py  example_usage.py  first_run_wizard.py  gpu_manager.py  graceful_degradation.py  hardware_detection.py  health.py  health_score.py  hwprofiler.py  install_parallel.py  installation_history.py  (+49 more)
cx/: ENTERPRISE_SECURITY.md  system_alert_manager.py  threshold_monitor.py
cx-daemon/: Cargo.toml
cx-daemon/src/: alerts.rs  ipc.rs  lib.rs  main.rs  monitoring.rs  paths.rs
daemon/: CMakeLists.txt  README.md
data/: bounty-payments.csv
debian/: changelog  control  copyright  cortex-linux.links  postrm  rules
docs/: AI_DEPENDENCY_CONFLICT_PREDICTION.md  AI_TUTOR.md  ASK_DO_ARCHITECTURE.md  ASSESSMENT.md  AUTOMATIC_OLLAMA_SETUP.md  BUILD_STATUS.md  CLEANUP_GUIDE.md  COMMANDS.md  CONTRIBUTING.md  DAEMON_API.md  DAEMON_ARCHITECTURE.md  DAEMON_BUILD.md  DAEMON_LLM_HEALTH_STATUS.md  DAEMON_SETUP.md  DAEMON_TROUBLESHOOTING.md  DASHBOARD_IMPLEMENTATION.md  ENV_MANAGEMENT.md  HYBRID_GPU_MANAGER.md  I18N_COMPLETE_IMPLEMENTATION.md  IMPROVEMENTS.md  INSTALL.md  INSTALLATION.md  ISSUE-268-TESTING.md  ISSUE_40_KIMI_K2_IMPLEMENTATION.md  JIT_BENCHMARK.md  LANDING-PAGE-COPY.md  LLAMA_CPP_IMPLEMENTATION_COMPLETE.md  LLAMA_CPP_INTEGRATION.md  LLM_SETUP.md  OLLAMA_AUTO_SETUP_IMPLEMENTATION.md  OLLAMA_AUTO_SETUP_QUICKREF.md  ONBOARDING.md  PRD-MVP-ROADMAP.md  PREDICTIVE_ERROR_PREVENTION.md  PROGRESS_INDICATORS.md  PROJECT_SCOPE.md  README_OLLAMA.md  RETRY_CONFIGURATION.md  SECURITY_MANAGEMENT.md  SMART_UPDATE_RECOMMENDATIONS.md  (+10 more)
examples/: cx-full.lua  cx-minimal.lua  cx-themes.lua  cx.lua  parallel_llm_demo.py  sample-config.yaml
mcp/: cortex_mcp_server.py
nix/: flake.nix
polymarket-addons/: .env.example  deploy.sh  patch_main.py  requirements.txt
polymarket-clob-bot/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  railway.json  requirements.txt
scripts/: __init__.py  build-deb.sh  cleanup-branches.sh  fetch-fork-emails.sh  gpu_manager.py  recruit-ready.sh  remove-collaborator.sh  resolve_issue_mismatch.md  security_history.json  setup_ask_do.py  setup_ask_do.sh  setup_ollama.py  systemd_service_helper.py  verify_ollama_setup.sh  verify_ubuntu_compatibility.py
shell-integration/: cx.bash  cx.zsh
src/: config_manager.py  hybrid_gpu_manager.py  requirements.txt  test_config_manager.py  test_llm_agent.py
test/: run_all_tests.py  test_cli.py  test_conflict_ui.py  test_package_suggester.py
tests/: benchmark_313.py  cli_test_base.py  conftest.py  run_all_tests.py  test_accelerator_limits.py  test_api_key_detector.py  test_approval_policy.py  test_ask.py  test_autonomous_patcher.py  test_batch_installer.py  test_benchmark.py  test_cleanup_cleaner.py  test_cleanup_manager.py  test_cleanup_scanner.py  test_cleanup_scheduler.py  test_cli.py  test_cli_docs.py  test_cli_extended.py  test_conflict_predictor.py  test_conflict_ui.py  test_context_memory.py  test_coordinator.py  test_dashboard.py  test_dependency_importer.py  test_dependency_resolver.py  test_diagnose_image.py  test_docs_generator.py  test_docs_security.py  test_env_loader.py  test_env_manager.py  test_error_parser.py  test_git_manager.py  test_hardware_detection.py  test_health.py  test_health_monitor.py  test_hwprofiler.py  test_hybrid_gpu_manager.py  test_i18n.py  test_interpreter.py  (+42 more)
wezterm/: Cargo.toml
wezterm/src/: main.rs
wezterm/src/cli/: ai.rs  ask.rs  ask_ai.rs  ask_context.rs  ask_patterns.rs  daemon.rs  fire.rs  hire.rs  license.rs  mod.rs  model_utils.rs  new.rs  shortcuts.rs  snapshot.rs
wezterm/src/cli/security/: database.rs  mod.rs  patcher.rs  scanner.rs  scheduler.rs
(+343 files in other folders)
