[package]
name = "cx-daemon"
version = "0.1.0"
authors = ["CX Linux Team <team@cxlinux.ai>"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "cx_daemon"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs-next = { workspace = true }
env-bootstrap = { workspace = true }
env_logger = { workspace = true }
filedescriptor = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["process", "signal"] }
rusqlite = { workspace = true, features = ["bundled", "blob"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
umask = { path = "../umask" }
uuid = { version = "1.0", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[[bin]]
name = "cx-daemon"
path = "src/main.rs"
