[package]
name = "cx-terminal"
version = "0.1.0"
authors = ["CX Linux <support@cxlinux.com>"]
edition = "2018"
publish = false
description = "CX Terminal - AI-native terminal for CX Linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
llama-cpp-2.workspace = true
hf-hub.workspace = true
dirs.workspace = true
tokio = { workspace = true, features = ["full"] }
clap_complete.workspace = true
clap_complete_fig.workspace = true
codec.workspace = true
config.workspace = true
cx-daemon = { path = "../cx-daemon" }
env-bootstrap.workspace = true
filedescriptor.workspace = true
hostname.workspace = true
humantime.workspace = true
image.workspace = true
libc.workspace = true
log.workspace = true
mux.workspace = true
portable-pty.workspace = true
promise.workspace  =true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
smol.workspace = true
tabout.workspace = true
tempfile.workspace = true
termwiz-funcs.workspace = true
reqwest = { workspace = true, features = ["json"] }
termwiz.workspace = true
textwrap.workspace  =true
umask.workspace = true
url.workspace = true
wezterm-client.workspace = true
wezterm-gui-subcommands.workspace = true
wezterm-term.workspace = true

# CX Security dependencies
rusqlite = { workspace = true, features = ["bundled"] }
ureq = { version = "2.9", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }

# HRM AI - Optional premium agent management (enable with --features hrm)
hrm-ai = { git = "https://github.com/mikejmorgan-ai/hrm-ai-standalone.git", optional = true }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres"], optional = true }

[features]
default = []
hrm = ["dep:hrm-ai", "dep:sqlx"]

[target."cfg(unix)".dependencies]
termios.workspace = true

[target."cfg(windows)".dependencies.winapi]
features = [
    "winbase",
    "winerror",
    "winnls",
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "synchapi",
]
workspace = true

[target.'cfg(windows)'.build-dependencies]
cc.workspace = true
embed-resource.workspace = true

[[bin]]
name = "cx-terminal"
path = "src/main.rs"
